--- a/product/src/lottery/index.css
+++ b/product/src/lottery/index.css
@@ -94,6 +94,9 @@ a {
   right: 0;
   font-size: 1.6vh;
   color: rgba(127, 255, 255, 0.75);
+  white-space: normal;
+  word-break: break-all;
+  overflow: hidden;
 }
 
 button {
