--- a/product/src/lottery/index.css
+++ b/product/src/lottery/index.css
@@ -77,6 +77,12 @@ a {
 }
 
 .element .name {
+  -o-text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   position: absolute;
   top: 4.6vh;
   left: 0;
